--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
 		}
 	],
     "framework-version": 16,
-    "compatibility": { "redcap-version-min": "14.7.0" },
+    "compatibility": { "redcap-version-min": "14.7.0", "php-version-min": "7.4.0" },
     "auth-ajax-actions": [ "save-randomiser-config", "randomise-record" ],
     "project-settings": [
         {
@@ -42,7 +42,7 @@
             "validation": "integer"
         },
         {
-            "name": "Seed sequence (positive integer<br><em>DO NOT EDIT</em> except to delete value after erasing all project data",
+            "name": "Seed sequence (positive integer)<br><em>DO NOT EDIT</em> except to delete value after erasing all project data",
             "key": "seed-sequence",
             "type": "text",
             "validation": "integer"
