Auto-extend alloc table option
Auto-extend alloc table option
Bug fix for batch page chart start counts

--- a/config.json
+++ b/config.json
@@ -85,6 +85,12 @@
                     "type": "text"
                 },
                 {
+                    "key": "rand-extend-table",
+                    "name": "Auto-extend allocation table entry if exhausted (not available for all allocation types)",
+                    "required": false,
+                    "type": "checkbox"
+                },
+                {
                     "key": "rand-config",
                     "name": "Randomization configuration settings",
                     "required": false,
